<resources>
    <string name="app_name">Grocery Cart</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_grocery_item_name">Grocery Item Name</string>
    <string name="dialog_title_item_add">Add Grocery Item...</string>
    <string name="hint_text_add_item_name">Please Enter Item Name</string>
    <string name="add_item">Add Items</string>
    <string name="dismiss">Dismiss</string>
    <string name="mark_all_done_at_exit">Mark All As Done On Exit</string>
    <string name="remove_all_on_exit">Remove All Items On Exit</string>
    <string name="no_changes_on_exit">No Changes On Exit</string>
    <string name="exit_toast_text">Press Back Again To Exit...</string>
    <string name="exit">Exit</string>
    <string name="label_adding_item">Adding Items...</string>
</resources>
